<resources>
    <string name="app_name">not-zero-ranger</string>
    <string name="play">PLAY</string>
    <string name="not">NOT</string>
    <string name="quit">QUIT</string>
    <string name="settings">SETTINGS</string>
    <string name="zero_ranger_logo">zero_ranger_logo</string>
    <string name="return_to_main_menu">Confirm</string>
    <string name="game_over">GAME OVER</string>
    <string name="retry">Retry</string>
    <string name="high_scores">High Scores</string>
    <string name="score_text">%1$s</string>
    <string name="rank_text">%1$d</string>
    <string name="_000000000">000000000</string>
    <string name="name">name</string>
    <string name="_1">1</string>
    <string name="highscore">HIGHSCORES</string>
    <string name="username">username</string>
    <string name="music">Music</string>
    <string name="health">Health</string>
    <string name="view_score">View score</string>
    <string name="about">ABOUT</string>
</resources>