<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".GameOverActivity">

    <Button
        android:id="@+id/returnButton"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/orange"
        android:text="@string/return_to_main_menu"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.879" />

    <Button
        android:id="@+id/retryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/pixelloid"
        android:text="@string/retry"
        android:textAlignment="center"
        android:textColorLink="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/returnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTextView"
        app:layout_constraintVertical_bias="0.726" />

    <TextView
        android:id="@+id/gameover"
        android:layout_width="243dp"
        android:layout_height="142dp"
        android:text="@string/game_over"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="315dp"
        android:layout_height="69dp"
        android:layout_marginTop="80dp"
        android:textAlignment="center"
        android:textColor="#FF9800"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameover" />

</androidx.constraintlayout.widget.ConstraintLayout>